--- a/cats/css/main.css.html
+++ b/cats/css/main.css.html
@@ -28,7 +28,8 @@
             GET('width'),
             GET('height'),
             GET('scaleX'),
-            GET('scaleY')
+            GET('scaleY'),
+            GET('content')
         ]
 
         var error = {
@@ -37,7 +38,8 @@
             "width": params[1],
             "height": params[2],
             "scaleX": params[3],
-            "scaleY": params[4]
+            "scaleY": params[4],
+            "content": params[5]
         }
 
         heightCSS["#content"] = new Object;
@@ -47,21 +49,26 @@
 
         if (params[0] == 'height') {
             heightCSS["#browserPanel"]["left"] = 6;
-            widthCSS["#content"]["width"] = 612;
             heightCSS["#content"]["border-radius"] = 5;
-            widthCSS["#content"]["height"] = widthCSS["#content"]["width"] / parseFloat(params[1]) * parseFloat(params[2]) - 1;
-            widthCSS["#content"]["margin-left"] = 0 - widthCSS["#content"]["width"] / 2;
-            widthCSS["#content"]["margin-top"] = (heightCSS["#header"]["height"] * parseFloat(params[4]) - widthCSS["#content"]["height"]) / 2;
         } else {
             widthCSS["#browserPanel"]["left"] = 6;
-            heightCSS["#content"]["height"] = 350;
             widthCSS["#content"]["border-radius"] = 5;
-            heightCSS["#content"]["width"] = heightCSS["#content"]["height"] / parseFloat(params[2]) * parseFloat(params[1]) - 1;
-            heightCSS["#content"]["margin-left"] = 0 - heightCSS["#content"]["width"] / 2;
-            heightCSS["#content"]["margin-top"] = (heightCSS["#header"]["height"] - heightCSS["#content"]["height"]) / 2;
+            
         }
 
-        if (params[0] != 'Invalid Key' && params[1] != 'Invalid Key' && params[2] != 'Invalid Key' && params[3] != 'Invalid Key' && params[4] != 'Invalid Key') {
+        if (params[5] == 'height') {
+            widthCSS["#content"]["width"] = 612;
+            widthCSS["#content"]["height"] = widthCSS["#content"]["width"] / parseFloat(params[1]) * parseFloat(params[2]) - 1;
+            widthCSS["#content"]["margin-top"] = (heightCSS["#header"]["height"] * parseFloat(params[4]) / 2  - widthCSS["#content"]["height"]) / 2;
+            widthCSS["#content"]["margin-left"] = 0 - widthCSS["#content"]["width"] / 2;
+        } else {
+            heightCSS["#content"]["height"] = 350;
+            heightCSS["#content"]["width"] = heightCSS["#content"]["height"] / parseFloat(params[2]) * parseFloat(params[1]) - 1;
+            heightCSS["#content"]["margin-top"] = (heightCSS["#header"]["height"] - heightCSS["#content"]["height"]) / 2;
+            heightCSS["#content"]["margin-left"] = 0 - heightCSS["#content"]["width"] / 2;
+        }
+
+        if (params[0] != 'Invalid Key' && params[1] != 'Invalid Key' && params[2] != 'Invalid Key' && params[3] != 'Invalid Key' && params[4] != 'Invalid Key' && params[5] != 'Invalid Key') {
             document.body.innerText = JSON.stringify(eval(GET('file')), null, 4);
         } else {
             document.body.innerText = JSON.stringify(error, null, 4);
