--- a/PixelArt 2.0/index.html
+++ b/PixelArt 2.0/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>PixelArt 2.0</title>
         <link rel="stylesheet" type="text/css" href="main.css">
+        <link rel="icon" type="image/png" href="images/icon.png">
     </head>
     <body>
         <div id="main"></div>
