--- a/PixelArt 2.0/index.html
+++ b/PixelArt 2.0/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>PixelArt 2.0</title>
-        <link rel="stylesheet" type="text/css" href="main.css">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
         <link rel="icon" type="image/png" href="images/icon.png">
     </head>
     <body>
