--- a/PixelArt 2.0/index.html
+++ b/PixelArt 2.0/index.html
@@ -3,9 +3,9 @@
         <title>PixelArt 2.0</title>
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <link rel="icon" type="image/png" href="images/icon.png">
+        <script type="text/javascript" src="js/libs/main.lib.js"></script>
     </head>
-    <body>
+    <body onresize="resize()">
         <div id="main"></div>
     </body>
-    <script type="text/javascript" src="js/libs/main.lib.js"></script>
 </html>
