--- a/PixelArt 2.0/index.html
+++ b/PixelArt 2.0/index.html
@@ -6,6 +6,7 @@
         <script type="text/javascript" src="js/libs/main.lib.js"></script>
     </head>
     <body onresize="resize()">
+        <div id="title">PixelArt 2.0</div>
         <div id="main"></div>
     </body>
 </html>
