--- a/PixelArt 2.0/index.html
+++ b/PixelArt 2.0/index.html
@@ -6,7 +6,17 @@
         <script type="text/javascript" src="js/libs/main.lib.js"></script>
     </head>
     <body onresize="resize()">
-        <div id="title">PixelArt 2.0</div>
+        <div id="title">
+            <div style="height: 100%; margin: 0 auto;">
+                <div class="iconB">
+                    <img src="images/new.svg" id="newA" class="icon hover"/>
+                </div>
+                <div id="tText">PixelArt 2.0</div>
+                <div class="iconB">
+                    <img src="images/icon160.svg" class="icon r"/>
+                </div>
+            </div>
+        </div>
         <div id="main"></div>
     </body>
 </html>
