--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -17,6 +17,6 @@
                 </div>
             </div>
         </div>
-        <div id="main"></div>
+        <div id="main" class="plot"></div>
     </body>
 </html>
