--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -11,7 +11,16 @@
                 <div class="iconB">
                     <img src="images/new.svg" id="newA" class="icon hover"/>
                 </div>
-                <div id="tText">PixelArt<!-- 2.0--></div>
+                <div id="tText">
+                    <div style="color: var(--gray); display: inline-block">P</div>
+                    <div style="color: var(--green); display: inline-block">i</div>
+                    <div style="color: var(--red); display: inline-block">x</div>
+                    <div style="color: var(--blue); display: inline-block">e</div>
+                    <div style="color: var(--red); display: inline-block">l</div>
+                    <div style="color: var(--gray); display: inline-block">A</div>
+                    <div style="color: var(--green); display: inline-block">r</div>
+                    <div style="color: var(--blue); display: inline-block">t</div>
+                <!-- 2.0--></div>
                 <div class="iconB">
                     <img src="images/icon160.svg" class="icon r"/>
                 </div>
