--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -4,6 +4,10 @@
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <link rel="icon" type="image/png" href="images/icon.png">
         <meta charset="utf-8">
+        <meta name="viewport">
+        <script type="text/javascript">
+            location.protocol == 'http:'? location.protocol = 'https:' : null
+        </script>
         <script type="text/javascript" src="js/libs/main.lib.js"></script>
     </head>
     <body onresize="resize()">
