--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -4,7 +4,8 @@
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <link rel="icon" type="image/png" href="images/icon.png">
         <meta charset="utf-8">
-        <meta name="viewport">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <meta name="theme-color" content="#dcdcdc">
         <script type="text/javascript">
             location.protocol == 'http:'? location.protocol = 'https:' : null
         </script>
