--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -3,6 +3,8 @@
         <title>PixelArt 2.0</title>
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <link rel="icon" type="image/png" href="images/icon.png">
+        <link rel="canonical" href="https://smurfik997.github.io/PixelArt/"/>
+        <link rel="manifest" href="manifest.webapp">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <meta name="theme-color" content="#dcdcdc">
