--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="ua">
     <head>
         <title>PixelArt 2.0</title>
         <link rel="stylesheet" type="text/css" href="css/main.css">
@@ -6,7 +6,7 @@
         <link rel="canonical" href="https://smurfik997.github.io/PixelArt/"/>
         <link rel="manifest" href="manifest.webapp">
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
         <meta name="theme-color" content="#dcdcdc">
         <script type="text/javascript">
             location.protocol == 'http:'? location.protocol = 'https:' : null
@@ -36,7 +36,7 @@
         <div id="title">
             <div style="height: 100%; margin: 0 auto;">
                 <div class="iconB">
-                    <img src="images/new.svg" id="newA" class="icon hover" active="false"/>
+                    <img src="images/new.svg" id="newA" alt="Створити" class="icon hover" active="false"/>
                 </div>
                 <div id="tText">
                     <div style="color: var(--gray); display: inline-block">P</div>
@@ -49,7 +49,7 @@
                     <div style="color: var(--blue); display: inline-block">t</div>
                 <!-- 2.0--></div>
                 <div class="iconB">
-                    <img src="images/icon160.svg" class="icon r"/>
+                    <img src="images/icon160.svg" alt="Логотип" class="icon r"/>
                 </div>
             </div>
         </div>
