--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -1,4 +1,4 @@
-<html lang="ua">
+<html lang="UA">
     <head>
         <title>PixelArt 2.0</title>
         <link rel="stylesheet" type="text/css" href="css/main.css">
