--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -36,7 +36,7 @@
         <div id="title">
             <div style="height: 100%; margin: 0 auto;">
                 <div class="iconB">
-                    <img src="images/new.svg" id="newA" alt="Створити" class="icon hover" active="false"/>
+                    <img src="images/new.svg" id="newA" alt="Створити" class="icon" active="false"/>
                 </div>
                 <div id="tText">
                     <div style="color: var(--gray); display: inline-block">P</div>
