--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -20,7 +20,7 @@
         <script id="windowE">
             window.addEventListener('error', function(e) {
                 if (e.error == undefined) {
-                    document.getElementById('error').style.display = 'block'
+                    document.getElementById('error').style.display = 'table'
                 }
             })
         </script>
