--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -17,6 +17,11 @@
         <div id="error">
             <div class="errorText">Ваш "кирпич" не підтримує деякі технології, які використовує ця веб-сторінка.</div>
         </div>
+        <div id="preload">
+            <div class="preloadI">
+                <img src="images/icon160.svg" alt="Логотип" style="height: 50%;"/>
+            </div>
+        </div>
         <script id="windowE">
             window.addEventListener('error', function(e) {
                 if (e.error == undefined) {
