--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -67,20 +67,20 @@
         <div id="settingsBlock" class="content settings">
             <div id="createM" class="plot">
                 <div id="settingsItems">
+                    <div id="framesCountS" class="sItem gray">
+                        <div class="sText">Кількість кадрів</div>
+                    </div>
                     <div id="plotPlatesS" class="sItem">
-                        <div>Розмір кадру</div>
+                        <div class="sText">Розмір кадру</div>
                     </div>
-                    <div id="framesCountS" class="sItem">
-                        <div>Кількість кадрів</div>
-                    </div>
-                    <div id="borderRadiudS" class="sItem">
-                        <div>Скруглення плиток</div>
+                    <div id="borderRadiudS" class="sItem gray">
+                        <div class="sText">Скруглення плиток</div>
                     </div>
                     <div id="replayS" class="sItem">
-                        <div>Режим (1 - 2 - 3)</div>
+                        <div class="sText">Режим (1 - 2 - 3)</div>
                     </div>
                 </div>
-                <div id="continueB" class="sItem"><!--Продовжити--></div>
+                <div id="continueB" class="sItem">Продовжити</div>
             </div>
         </div>
     </body>
