--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -65,7 +65,7 @@
             <div id="main" class="plot"></div>
         </div>
         <div id="settingsBlock" class="content settings">
-            <div id="createM" class="plot">
+            <div id="createM">
                 <div id="settingsItems">
                     <div id="framesCountS" class="sItem gray">
                         <div class="sText">Кількість кадрів</div>
