--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -69,6 +69,9 @@
                 <div id="settingsItems">
                     <div id="framesCountS" class="sItem gray">
                         <div class="sText">Кількість кадрів</div>
+                        <div class="counter"> 
+                            <div></div>
+                        </div>
                     </div>
                     <div id="plotPlatesS" class="sItem">
                         <div class="sText">Розмір кадру</div>
@@ -80,7 +83,9 @@
                         <div class="sText">Режим (1 - 2 - 3)</div>
                     </div>
                 </div>
-                <div id="continueB" class="sItem">Продовжити</div>
+                <div id="continueB" class="sItem">
+                    <div class="sText continue">Продовжити</div>
+                </div>
             </div>
         </div>
     </body>
