--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -80,7 +80,7 @@
                         <div class="sText">Скруглення плиток</div>
                     </div>
                     <div id="replayS" class="sItem">
-                        <div class="sText">Режим (1 - 2 - 3)</div>
+                        <div class="sText">Режим (1 - 2 - ...)</div>
                     </div>
                 </div>
                 <div id="continueB" class="sItem">
