--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <div id="continueB" class="sItem">
-                    <div class="sText continue b">Продовжити</div>
+                    <div class="sText continue">Продовжити</div>
                 </div>
             </div>
         </div>
