--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -70,17 +70,29 @@
                     <div id="framesCountS" class="sItem gray">
                         <div class="sText">Кількість кадрів</div>
                         <div class="counter"> 
-                            <div></div>
+                            <div class="counterB">&minus;</div>
+                            <div class="counterT">2</div>
+                            <div class="counterB plus">+</div>
                         </div>
                     </div>
                     <div id="plotPlatesS" class="sItem">
                         <div class="sText">Розмір кадру</div>
+                        <div class="counter"> 
+                            <div class="counterB">&minus;</div>
+                            <div class="counterT gray">2</div>
+                            <div class="counterB plus">+</div>
+                        </div>
                     </div>
                     <div id="borderRadiudS" class="sItem gray">
                         <div class="sText">Скруглення плиток</div>
+                        <div class="counter"> 
+                            <div class="counterB">&minus;</div>
+                            <div class="counterT">0</div>
+                            <div class="counterB plus">+</div>
+                        </div>
                     </div>
                     <div id="replayS" class="sItem">
-                        <div class="sText">Режим (1 - 2 - ...)</div>
+                        <div class="sText">Показ кадрів</div>
                     </div>
                 </div>
                 <div id="continueB" class="sItem">
