--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <link rel="icon" type="image/png" href="images/icon.png">
         <link rel="canonical" href="https://smurfik997.github.io/PixelArt/"/>
-        <link rel="manifest" href="manifest.webmanifest">
+        <link rel="manifest" href="manifest.webapp">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
         <meta name="theme-color" content="#64FFC8">
