--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -7,7 +7,7 @@
         <link rel="manifest" href="manifest.webapp">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
-        <meta name="theme-color" content="#A0FFC8">
+        <meta name="theme-color" content="#50b4e6">
         <script type="text/javascript">
             location.protocol == 'http:'? location.protocol = 'https:' : null
         </script>
