--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -70,25 +70,25 @@
                     <div id="framesCountS" class="sItem gray">
                         <div class="sText">Кількість кадрів</div>
                         <div class="counter"> 
-                            <div class="counterB">&minus;</div>
+                            <div class="counterB" onclick="sButtonClick('framesCountS', '-', 2, 10, 1)">&minus;</div>
                             <div class="counterT">2</div>
-                            <div class="counterB plus">+</div>
+                            <div class="counterB plus" onclick="sButtonClick('framesCountS', '+', 2, 10, 1)">+</div>
                         </div>
                     </div>
                     <div id="plotPlatesS" class="sItem">
                         <div class="sText">Розмір кадру</div>
                         <div class="counter"> 
-                            <div class="counterB">&minus;</div>
+                            <div class="counterB" onclick="sButtonClick('plotPlatesS', '-', 2, 10, 1)">&minus;</div>
                             <div class="counterT gray">2</div>
-                            <div class="counterB plus">+</div>
+                            <div class="counterB plus" onclick="sButtonClick('plotPlatesS', '+', 2, 10, 1)">+</div>
                         </div>
                     </div>
                     <div id="borderRadiudS" class="sItem gray">
                         <div class="sText">Скруглення плиток</div>
                         <div class="counter"> 
-                            <div class="counterB">&minus;</div>
+                            <div class="counterB" onclick="sButtonClick('borderRadiudS', '-', 0, 50, 5)">&minus;</div>
                             <div class="counterT">0</div>
-                            <div class="counterB plus">+</div>
+                            <div class="counterB plus" onclick="sButtonClick('borderRadiudS', '+', 0, 50, 5)">+</div>
                         </div>
                     </div>
                     <div id="replayS" class="sItem">
