--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -93,6 +93,9 @@
                     </div>
                     <div id="replayS" class="sItem">
                         <div class="sText">Показ кадрів</div>
+                        <div class="counter">
+                            <div class="counterT switch" onclick="switchB()">1 - 2 - 3 - 1 - ...</div>
+                        </div>
                     </div>
                 </div>
                 <div id="continueB" class="sItem">
