--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -70,31 +70,39 @@
                     <div id="framesCountS" class="sItem gray">
                         <div class="sText">Кількість кадрів</div>
                         <div class="counter"> 
-                            <div class="counterB" onclick="sButtonClick('framesCountS', '-', 2, 10, 1)">&minus;</div>
+                            <div class="counterB" onclick="sButtonClick('framesCountS', '-', 2, 10, 1, 'framesC')">&minus;</div>
                             <div class="counterT">2</div>
-                            <div class="counterB plus" onclick="sButtonClick('framesCountS', '+', 2, 10, 1)">+</div>
+                            <div class="counterB plus" onclick="sButtonClick('framesCountS', '+', 2, 10, 1, 'framesC')">+</div>
                         </div>
                     </div>
                     <div id="plotPlatesS" class="sItem">
                         <div class="sText">Розмір кадру</div>
                         <div class="counter"> 
-                            <div class="counterB" onclick="sButtonClick('plotPlatesS', '-', 2, 10, 1)">&minus;</div>
+                            <div class="counterB" onclick="sButtonClick('plotPlatesS', '-', 2, 10, 1, 'plotPlates')">&minus;</div>
                             <div class="counterT gray">2</div>
-                            <div class="counterB plus" onclick="sButtonClick('plotPlatesS', '+', 2, 10, 1)">+</div>
+                            <div class="counterB plus" onclick="sButtonClick('plotPlatesS', '+', 2, 10, 1, 'plotPlates')">+</div>
                         </div>
                     </div>
                     <div id="borderRadiudS" class="sItem gray">
                         <div class="sText">Скруглення плиток</div>
                         <div class="counter"> 
-                            <div class="counterB" onclick="sButtonClick('borderRadiudS', '-', 0, 50, 5)">&minus;</div>
+                            <div class="counterB" onclick="sButtonClick('borderRadiudS', '-', 0, 50, 5, 'customS.bRadius')">&minus;</div>
                             <div class="counterT">0</div>
-                            <div class="counterB plus" onclick="sButtonClick('borderRadiudS', '+', 0, 50, 5)">+</div>
+                            <div class="counterB plus" onclick="sButtonClick('borderRadiudS', '+', 0, 50, 5, 'customS.bRadius')">+</div>
                         </div>
                     </div>
-                    <div id="replayS" class="sItem">
+                    <div id="fDispTimeS" class="sItem">
+                        <div class="sText">Час показу кадру</div>
+                        <div class="counter"> 
+                            <div class="counterB" onclick="sButtonClick('fDispTimeS', '-', 100, 1000, 50, 'fDispTime')">&minus;</div>
+                            <div class="counterT gray">100</div>
+                            <div class="counterB plus" onclick="sButtonClick('fDispTimeS', '+', 100, 1000, 50, 'fDispTime')">+</div>
+                        </div>
+                    </div>
+                    <div id="replayS" class="sItem gray">
                         <div class="sText">Показ кадрів</div>
                         <div class="counter">
-                            <div class="counterT switch" onclick="switchB()">1 - 2 - 3 - 1 - ...</div>
+                            <div class="counterT switch" onclick="switchB()">1 - 2 - 3 - 2 - ...</div>
                         </div>
                     </div>
                 </div>
