--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -47,14 +47,14 @@
                     <img src="images/new.svg" id="newA" alt="Створити" class="icon" active="false"/>
                 </div>
                 <div id="tText">
-                    <div style="color: var(--gray); display: inline-block">P</div>
+                    <div style="color: var(--blue); display: inline-block">P</div>
                     <div style="color: var(--green); display: inline-block">i</div>
                     <div style="color: var(--red); display: inline-block">x</div>
                     <div style="color: var(--blue); display: inline-block">e</div>
-                    <div style="color: var(--red); display: inline-block">l</div>
-                    <div style="color: var(--gray); display: inline-block">A</div>
-                    <div style="color: var(--green); display: inline-block">r</div>
-                    <div style="color: var(--blue); display: inline-block">t</div>
+                    <div style="color: var(--green); display: inline-block">l</div>
+                    <div style="color: var(--red); display: inline-block">A</div>
+                    <div style="color: var(--blue); display: inline-block">r</div>
+                    <div style="color: var(--green); display: inline-block">t</div>
                 <!-- 2.0--></div>
                 <div class="iconB">
                     <img src="images/icon160.svg" alt="Логотип" class="icon r"/>
@@ -67,7 +67,7 @@
         <div id="settingsBlock" class="content settings">
             <div id="createM">
                 <div id="settingsItems">
-                    <div id="framesCountS" class="sItem gray">
+                    <div id="framesCountS" class="sItem">
                         <div class="sText">Кількість кадрів</div>
                         <div class="counter"> 
                             <div class="counterB" onclick="sButtonClick('framesCountS', '-', 2, 10, 1, 'framesC')">&minus;</div>
@@ -79,11 +79,11 @@
                         <div class="sText">Розмір кадру</div>
                         <div class="counter"> 
                             <div class="counterB" onclick="sButtonClick('plotPlatesS', '-', 2, 10, 1, 'plotPlates')">&minus;</div>
-                            <div class="counterT gray">2</div>
+                            <div class="counterT">2</div>
                             <div class="counterB plus" onclick="sButtonClick('plotPlatesS', '+', 2, 10, 1, 'plotPlates')">+</div>
                         </div>
                     </div>
-                    <div id="borderRadiudS" class="sItem gray">
+                    <div id="borderRadiudS" class="sItem">
                         <div class="sText">Скруглення плиток</div>
                         <div class="counter"> 
                             <div class="counterB" onclick="sButtonClick('borderRadiudS', '-', 0, 50, 5, 'customS.bRadius')">&minus;</div>
@@ -95,11 +95,11 @@
                         <div class="sText">Час показу кадру</div>
                         <div class="counter"> 
                             <div class="counterB" onclick="sButtonClick('fDispTimeS', '-', 100, 1000, 50, 'fDispTime')">&minus;</div>
-                            <div class="counterT gray">100</div>
+                            <div class="counterT">100</div>
                             <div class="counterB plus" onclick="sButtonClick('fDispTimeS', '+', 100, 1000, 50, 'fDispTime')">+</div>
                         </div>
                     </div>
-                    <div id="replayS" class="sItem gray">
+                    <div id="replayS" class="sItem">
                         <div class="sText">Показ кадрів</div>
                         <div class="counter">
                             <div class="counterT switch" onclick="switchB()">1 - 2 - 3 - 2 - ...</div>
