--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -50,14 +50,14 @@
                     <img src="images/svg/palette.svg" id="palette" alt="Палітра" class="icon" active="false"/>
                 </div>
                 <div id="tText">
-                    <div style="color: var(--blue); display: inline-block">P</div>
-                    <div style="color: var(--green); display: inline-block">i</div>
-                    <div style="color: var(--red); display: inline-block">x</div>
-                    <div style="color: var(--blue); display: inline-block">e</div>
-                    <div style="color: var(--green); display: inline-block">l</div>
-                    <div style="color: var(--red); display: inline-block">A</div>
-                    <div style="color: var(--blue); display: inline-block">r</div>
-                    <div style="color: var(--green); display: inline-block">t</div>
+                    <span style="color: var(--blue);">P</span>
+                    <span style="color: var(--green);">i</span>
+                    <span style="color: var(--red);">x</span>
+                    <span style="color: var(--blue);">e</span>
+                    <span style="color: var(--green);">l</span>
+                    <span style="color: var(--red);">A</span>
+                    <span style="color: var(--blue);">r</span>
+                    <span style="color: var(--green);">t</span>
                 <!-- 2.0--></div>
                 <div class="iconB">
                     <img src="images/svg/icon160.svg" alt="Логотип" id="logo" class="icon r"/>
