--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -59,6 +59,13 @@
                     <span style="color: var(--blue);">r</span>
                     <span style="color: var(--green);">t</span>
                 <!-- 2.0--></div>
+                <div id="fCurrNum" class="noDisp">
+                    <div class="counter" style="margin-top: 0; height: 60%;"> 
+                        <div class="counterB" onclick="sButtonClick('borderRadiudS', '-', 1, null, 1, 'customS.bRadius')">&minus;</div>
+                        <div class="counterT">1</div>
+                        <div class="counterB plus" onclick="sButtonClick('borderRadiudS', '+', 1, null, 1, 'customS.bRadius')">+</div>
+                    </div>
+                </div>
                 <div class="iconB">
                     <img src="images/svg/icon160.svg" alt="Логотип" id="logo" class="icon r"/>
                 </div>
