--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -60,10 +60,10 @@
                     <span style="color: var(--green);">t</span>
                 <!-- 2.0--></div>
                 <div id="fCurrNum" class="noDisp">
-                    <div class="counter" style="margin-top: 0; height: 60%; width: 100%;"> 
-                        <div class="counterB" onclick="sButtonClick('borderRadiudS', '-', 1, null, 1, 'customS.bRadius')">&minus;</div>
+                    <div id="fCurrNumCounter" class="counter" style="margin-top: 0; height: 60%; width: 100%;"> 
+                        <div class="counterB" onclick="sButtonClick('fCurrNumCounter', '-', 1, anim.framesC, 1, '')">&minus;</div>
                         <div class="counterT">1</div>
-                        <div class="counterB plus" onclick="sButtonClick('borderRadiudS', '+', 1, null, 1, 'customS.bRadius')">+</div>
+                        <div class="counterB plus" onclick="sButtonClick('fCurrNumCounter', '+', 1, anim.framesC, 1, '')">+</div>
                     </div>
                 </div>
                 <div class="iconB">
