--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -61,9 +61,9 @@
                 <!-- 2.0--></div>
                 <div id="fCurrNum" class="noDisp">
                     <div id="fCurrNumCounter" class="counter" style="margin-top: 0; height: 60%; width: 100%;"> 
-                        <div class="counterB" onclick="sButtonClick('fCurrNumCounter', '-', 1, anim.framesC, 1, '')">&minus;</div>
-                        <div class="counterT">1</div>
-                        <div class="counterB plus" onclick="sButtonClick('fCurrNumCounter', '+', 1, anim.framesC, 1, '')">+</div>
+                        <div class="counterB noVA" onclick="sButtonClick('fCurrNumCounter', '-', 1, anim.framesC, 1, '')">&minus;</div>
+                        <div class="counterT noVA">1</div>
+                        <div class="counterB plus noVA" onclick="sButtonClick('fCurrNumCounter', '+', 1, anim.framesC, 1, '')">+</div>
                     </div>
                 </div>
                 <div class="iconB">
