--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -61,9 +61,9 @@
                 <!-- 2.0--></div>
                 <div id="fCurrNum" class="noDisp">
                     <div id="fCurrNumCounter" class="counter" style="margin-top: 0; height: 60%; width: 100%;"> 
-                        <div class="counterB noVA" onclick="sButtonClick('fCurrNumCounter', '-', 1, anim.framesC, 1, '')">&minus;</div>
+                        <div class="counterB noVA" style="padding-left: 1%;" onclick="sButtonClick('fCurrNumCounter', '-', 1, anim.framesC, 1, '')">&minus;</div>
                         <div class="counterT noVA">1</div>
-                        <div class="counterB plus noVA" onclick="sButtonClick('fCurrNumCounter', '+', 1, anim.framesC, 1, '')">+</div>
+                        <div class="counterB plus noVA" style="padding-right: 1%;" onclick="sButtonClick('fCurrNumCounter', '+', 1, anim.framesC, 1, '')">+</div>
                     </div>
                 </div>
                 <div class="iconB">
@@ -76,6 +76,9 @@
         </div>
         <div id="contentBlock" class="content">
             <div id="main" class="plot"></div>
+        </div>
+        <div id="createBlock" class="content settings">
+            <div id="create" class="plot"></div>
         </div>
         <div id="settingsBlock" class="content settings">
             <div id="createM">
